--- a/teams/python_primitive/config.yml
+++ b/teams/python_primitive/config.yml
@@ -12,3 +12,4 @@ AgentsBrainClasses:
     WarKamikaze: WarKamikaze.py
     WarEngineer: WarEngineer.py
     WarTurret: WarTurret.py
+    WarTest: WarTest.py
