--- a/src/main/resources/teams/python_teamFunction_level_0/config.yml
+++ b/src/main/resources/teams/python_teamFunction_level_0/config.yml
@@ -8,6 +8,8 @@ ScriptImplementation: python
 AgentsBrainClasses:
     WarBase: WarBase.py
     WarExplorer: WarExplorer.py
+    WarLight: WarLight.py
+    WarHeavy: WarHeavy.py
     WarRocketLauncher: WarRocketLauncher.py
     WarKamikaze: WarKamikaze.py
     WarEngineer: WarEngineer.py
