--- a/src/main/resources/teams/fsm/config.yml
+++ b/src/main/resources/teams/fsm/config.yml
@@ -7,6 +7,8 @@ BrainsPackage: teams.fsm
 AgentsBrainClasses:
     WarBase: WarBaseBrainController
     WarExplorer: WarExplorerBrainController
+    WarLight: WarLightBrainController
+    WarHeavy: WarHeavyBrainController
     WarRocketLauncher: WarRocketLauncherBrainController
     WarKamikaze: WarKamikazeBrainController
     WarEngineer: WarEngineerBrainController
