--- a/src/main/resources/teams/javascript_level_0/config.yml
+++ b/src/main/resources/teams/javascript_level_0/config.yml
@@ -8,6 +8,8 @@ ScriptImplementation: javascript
 AgentsBrainClasses:
     WarBase: WarBase.js
     WarExplorer: WarExplorer.js
+    WarLight: WarLight.js
+    WarHeavy: WarHeavy.js
     WarRocketLauncher: WarRocketLauncher.js
     WarKamikaze: WarKamikaze.js
     WarEngineer: WarEngineer.js
