--- a/teams/python_test/config.yml
+++ b/teams/python_test/config.yml
@@ -8,8 +8,9 @@ ScriptImplementation: python
 AgentsBrainClasses:
     WarBase: WarBase.py
     WarExplorer: WarExplorer.py
+    WarLight: WarLight.py
+    WarHeavy: WarHeavy.py
     WarRocketLauncher: WarRocketLauncher.py
     WarKamikaze: WarKamikaze.py
     WarEngineer: WarEngineer.py
     WarTurret: WarTurret.py
-    WarTest: WarTest.py
