--- a/config/warbot_settings.yml
+++ b/config/warbot_settings.yml
@@ -31,10 +31,12 @@ WarAgents:
             Cost: 12000
             MaxHealth: 12000
             BagSize: 1000000
+            Armor: 10
             Hitbox: { Shape: Square, SideLength: 4.0 }
         Wall:
             Cost: 500
             MaxHealth: 15000
+            Armor: 0
             Hitbox: { Shape: Rectangle, Width: 5.0, Height: 20.0 }
     Worker:
         WarExplorer:
@@ -44,6 +46,7 @@ WarAgents:
             MaxHealth: 3000
             BagSize: 4
             Speed: 1.2
+            Armor: 0
             Hitbox: { Shape: Circle, Radius: 2.0 }
         WarEngineer:
             AngleOfView: 150.0
@@ -53,6 +56,7 @@ WarAgents:
             BagSize: 4
             Speed: 1.0
             MaxRepairsPerTick: 500
+            Armor: 0
             Hitbox: { Shape: Triangle, Radius: 2.0 }
     Soldier:
         WarLight:
@@ -63,6 +67,7 @@ WarAgents:
             BagSize: 4
             Speed: 0.8
             TicksToReload: 1
+            Armor: 1
             Hitbox: { Shape: Square, SideLength: 5.0 }
         WarHeavy:
             AngleOfView: 120.0
@@ -72,6 +77,7 @@ WarAgents:
             BagSize: 4
             Speed: 0.8
             TicksToReload: 5
+            Armor: 7
             Hitbox: { Shape: Square, SideLength: 5.0 }
         WarRocketLauncher:
             AngleOfView: 120.0
@@ -81,6 +87,7 @@ WarAgents:
             BagSize: 4
             Speed: 0.8
             TicksToReload: 50
+            Armor: 3
             Hitbox: { Shape: Square, SideLength: 3.0 }
         WarKamikaze:
             AngleOfView: 150.0
@@ -89,6 +96,7 @@ WarAgents:
             MaxHealth: 3000
             BagSize: 4
             Speed: 1.0
+            Armor: 0
             Hitbox: { Shape: Diamond, Radius: 2.0 }
         WarTurret:
             AngleOfView: 180.0
@@ -97,6 +105,7 @@ WarAgents:
             MaxHealth: 4000
             BagSize: 10
             TicksToReload: 30
+            Armor: 10
             Hitbox: { Shape: Arrow, Radius: 3.0 }
     Projectile:
         WarRocket:
