--- a/src/main/resources/config/preferences.yml
+++ b/src/main/resources/config/preferences.yml
@@ -5,14 +5,15 @@ teamsSourcesFolders:
 #    PythonLevel0: "teams/level0"
     Time To Explode: "teams/timetoexplode"
 #    FSM: "teams/fsm"
+    Test team: "teams/test_team"
 
 # Number of agents of each type to deploy at game start
 NbAgentsAtStart:
     WarBase: 1
-    WarExplorer: 5
-    WarLight: 1
-    WarHeavy: 1
-    WarRocketLauncher: 5
+    WarExplorer: 0
+    WarLight: 0
+    WarHeavy: 0
+    WarRocketLauncher: 0
     WarKamikaze: 0
     WarEngineer: 0
     WarTurret: 0
