Debug - Envoi/Réception de messages
Correction du broadcastMessageToAll, ce n'est plus InGameTeam qui envoie le message à tous les agents de l'équipe mais l'agent lui-même.\n La mise à jour de la boite aux lettres se fait à chaque début de tick et non plus à chaque appel de la méthode getMessages

--- a/config/preferences.yml
+++ b/config/preferences.yml
@@ -5,6 +5,7 @@ teamsSourcesFolders:
 #    PythonLevel0: "teams/level0"
     Time To Explode: "teams/timetoexplode"
 #    FSM: "teams/fsm"
+    Debug team: "teams/debug_team"
 
 # Number of agents of each type to deploy at game start
 NbAgentsAtStart:
