Debug - Correction chemin/package/...

--- a/src/main/resources/config/preferences.yml
+++ b/src/main/resources/config/preferences.yml
@@ -6,7 +6,8 @@ teamsSourcesFolders:
     Time To Explode: "teams/timetoexplode"
 #    FSM: "teams/fsm"
     Presentation relic: "teams/presentation_relic"
-    Debug team: "teams/debug_team"    
+    Debug team: "teams/debug_team"
+    Test team: "teams/test_team"
 
 # Number of agents of each type to deploy at game start
 NbAgentsAtStart:
