--- a/config/preferences.yml
+++ b/config/preferences.yml
@@ -5,9 +5,9 @@ teamsSourcesFolders:
 #    PythonLevel0: "teams/level0"
     Time To Explode: "teams/timetoexplode"
 #    FSM: "teams/fsm"
-#    Pres relic: "teams/pres_relic"
+    Presentation relic: "teams/presentation_relic"
     Debug team: "teams/debug_team"
-    Test team: "teams/test_team"    
+    Test team: "teams/test_team"
 
 # Number of agents of each type to deploy at game start
 NbAgentsAtStart:
