--- a/src/main/resources/teams/test_team/config.yml
+++ b/src/main/resources/teams/test_team/config.yml
@@ -13,3 +13,5 @@ AgentsBrainClasses:
     WarKamikaze: WarKamikazeBrainController
     WarEngineer: WarEngineerBrainController
     WarTurret: WarTurretBrainController
+isIA: true
+isPlayer: false
