Interface/TeamLoader(logo par defaut)/Debug
L'interface possède à présent un onglet personnalisé et personnalisable pour chaque mode de jeu. Les différentes parties de ce panel personnalisable ont été améliorées : liste déroulante des teams qui s'ajustent à la taille des noms, la partie centrale (description, choix team,...) s'adaptent lorsque la fenêtre est redimensionnée,... Ajout d'un logo par défaut pour les teams si le chargement du logo personnalisé échoue.

--- a/config/preferences.yml
+++ b/config/preferences.yml
@@ -2,11 +2,12 @@
 teamsSourcesFolders:
 #   <teamName>: path/to/directory/separated/by/slashes
     Engineer: "teams/engineer"
-#    PythonLevel0: "teams/level0"
-    Time To Explode: "teams/timetoexplode"
-#    FSM: "teams/fsm"
     Debug team: "teams/debug_team"
-
+    Test team: "teams/test_team"
+    Resources and construction: "teams/resources_and_construction_team"
+    Time To Explode: "teams/timetoexplode"
+#    PythonLevel0: "teams/level0"
+#    FSM: "teams/fsm"
 
 # Number of agents of each type to deploy at game start
 NbAgentsAtStart:
