--- a/config/preferences.yml
+++ b/config/preferences.yml
@@ -8,6 +8,7 @@ teamsSourcesFolders:
     Presentation relic: "teams/presentation_relic"
     Debug team: "teams/debug_team"
     Test team: "teams/test_team"
+    Team duel: "teams/team_duel"
 
 # Number of agents of each type to deploy at game start
 NbAgentsAtStart:
