--- a/config/warbot.properties
+++ b/config/warbot.properties
@@ -8,7 +8,7 @@ turtles=null
 launcher=edu.warbot.launcher.WarLauncher
 community=TK.community
 viewers=edu.warbot.gui.viewer.WarDefaultViewer
-environment=turtlekit.kernel.TKEnvironment
+environment=edu.warbot.launcher.WarEnvironment
 scheduler=edu.warbot.launcher.WarScheduler
 patch=turtlekit.kernel.Patch
 noWrap=false
