--- a/src/main/resources/config/warbot.properties
+++ b/src/main/resources/config/warbot.properties
@@ -1,4 +1,4 @@
-warbot.version=3.2.4
+warbot.version=3.2.6
 warbot.jar.name=warbot-${warbot.version}.jar
 desktopFrameClass=turtlekit.gui.TKDesktopFrame
 agentFrameClass=turtlekit.gui.TKAgentFrame
@@ -8,7 +8,7 @@ turtles=null
 launcher=edu.warbot.launcher.WarLauncher
 community=TK.community
 viewers=edu.warbot.gui.viewer.WarDefaultViewer
-environment=turtlekit.kernel.TKEnvironment
+environment=edu.warbot.launcher.WarEnvironment
 scheduler=edu.warbot.launcher.WarScheduler
 patch=turtlekit.kernel.Patch
 noWrap=false
