Graphisme - fusion (Debug)
Ajout dans pom.xml, les dossiers à construire (Maven). Debug de la sortie du programme (dispose de toutes les fenêtres -> certaines sont créées avec l'option DO_NOTHING_ON_CLOSE)

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,26 @@
 	</dependencies>
 	
     <build>
+    
+    	<resources>
+    		<resource>
+    			<directory>src/main/java/edu/warbot</directory>
+    		</resource>
+    		
+    		<resource>
+    			<directory>src/main/java/teams</directory>
+    		</resource>
+    		
+    		<resource>
+    			<directory>src/main/resources</directory>
+    		</resource>
+    		
+    		<resource>
+    			<directory>assets</directory>
+    		</resource>
+    	</resources>
+    
+    
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
