Graphisme/Interface/Situation - maj/debug/situation
Maj des graphismes : zoom, ... Debug des graphismes. Ajout chargement/sauvegarde situation. Maj interface : conservation des paramètres précédemment validés (fonctionne avec le reload), ne recharge pas à chaque fin de partie les teams, ... Debug profond sur la compatibilité fonctionnalité java et script. (+corrections des teams codées en script).

--- a/pom.xml
+++ b/pom.xml
@@ -132,22 +132,20 @@
 	</dependencies>
 	
     <build>
-    
+    	<!-- default maven folder build -->
     	<resources>
     		<resource>
-    			<directory>src/main/java/edu/warbot</directory>
+    			<directory>src/main/java</directory>
     		</resource>
-    		
-    		<resource>
-    			<directory>src/main/java/teams</directory>
-    		</resource>
-    		
     		<resource>
     			<directory>src/main/resources</directory>
     		</resource>
     		
     		<resource>
-    			<directory>assets</directory>
+    			<directory>src/test/java</directory>
+    		</resource>
+    		<resource>
+    			<directory>src/test/resources</directory>
     		</resource>
     	</resources>
     
